@@ -15,6 +15,8 @@ License
 
 Ukolovnik is provided under GNU GPL version 2.
 
+Some icons were taken from phpMyAdmin (GNU GPL) and GNOME (GNU LGPL).
+
 
 Installation
 ------------
