@@ -10,6 +10,10 @@ News
 0.3 release
 
     * Several bugfixes.
+    * Configurable language and style.
+    * Improved timestamp display.
+    * Icons for some actions for more copact view.
+    * Added some statistics.
 
 0.2 release (2006-02-20)
 
